fixed footer and label alignment

--- a/src/main/resources/static/css/base.css
+++ b/src/main/resources/static/css/base.css
@@ -158,4 +158,10 @@ margin-left: 60pt;
 
 }
 
+label {
+  display: inline-block;
+  width: 250px;
+}
+
+
 
